# lfstage

./: .gitmodules  .rustfmt.toml  Cargo.toml  README.md
etc/lfstage/: config.toml
man/: lfstage-profile.5.scd  lfstage-sources.5.scd  lfstage.1.scd
src/: config.rs  main.rs  profile.rs
src/cli/: build.rs  download.rs  export.rs  import.rs  list.rs  mod.rs
src/utils/: cmd.rs  debug.rs  dl.rs  init.rs  mod.rs  time.rs
usr/lib/lfstage/scripts/: reqs.sh  save.sh
