[package]
name = "lfstage"
version = "3.0.0-dev"
edition = "2024"
authors = [ "tox" ]
description = "LFS stage file generator"
license = "GPL-3.0"

[profile.release]
strip = "symbols"
lto = "thin"
panic = "abort"
debug-assertions = true

[dependencies]
fshelpers = { git = "https://github.com/tox-wtf/fshelpers.git" }
clap = { version = "4", features = ["derive"] }
is_executable = "1"
libc = "0.2"
serde_derive = "1.0"
thiserror = "2"
toml = "0.9"
tracing = "0.1"
tracing-appender = "0.2"
tokio = { version = "1.45", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["stream"] }
futures = "0.3"
async-once-cell = "0.5"
which = "8"
httpdate = "1"
tempfile = "3"
permitit = "0.1"
size = "0.5"
num_cpus = "1.16"

[patch.crates-io]
size = { path = "vendor/size" }

[dependencies.chrono]
version = "0.4"
default-features = false
features = [ "clock", "std" ]

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.tracing-subscriber]
version = "0.3"
features = [ "env-filter" ]
