[package]
name = "lfstage"
version = "3.0.0-dev"
edition = "2024"
authors = [ "tox" ]
description = "LFS stage file generator"
license = "GPL-3.0"

[profile.release]
strip = "symbols"
lto = "thin"
panic = "abort"
debug-assertions = true

[dependencies]
fshelpers = { git = "https://github.com/tox-wtf/fshelpers.git" }
clap = { version = "4", features = ["derive"] }
is_executable = "1"
libc = "0.2"
serde_derive = "1.0"
thiserror = "2"
toml = "0.9"
tracing = "0.1"
tracing-appender = "0.2"
tokio = { version = "1.45", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["stream", "rustls"] }
futures = "0.3"
async-once-cell = "0.5"
which = "8"
httpdate = "1"
tempfile = "3"
permitit = "0.1"
size = { version = "0.5", git = "https://github.com/tox-wtf/prettysize-rs.git" }
num_cpus = "1.16"

[dependencies.chrono]
version = "0.4"
default-features = false
features = [ "clock", "std" ]

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.tracing-subscriber]
version = "0.3"
features = [ "env-filter" ]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = 9 }
suspicious = { level = "deny", priority = 8 }
complexity = { level = "deny", priority = 7 }
perf = { level = "deny", priority = 6 }
nursery = { level = "deny", priority = 5 }
unwrap_used = { level = "deny" }
expect_used = { level = "warn" }
todo = { level = "deny" }
match_bool = { level = "allow" }
